Demonstrate retrieving the user
