# examples/simple/openapi.json
@@ -144,6 +144,13 @@
         "tags": [
           "widget"
         ],
+        "security": [
+          {
+            "apiKey": [
+              "widgets:write"
+            ]
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -172,13 +179,6 @@
             }
           }
         },
-        "security": [
-          {
-            "apiKey": [
-              "write:widgets"
-            ]
-          }
-        ],
         "description": "Create a widget"
       }
     },
