# examples/simple/src/controllers/widgets.authenticator.ts
@@ -3,6 +3,11 @@ import {
   AuthenticationController,
   RequestContext,
 } from "@simply-openapi/controllers";
+import { Unauthorized } from "http-errors";
+
+export interface AuthenticatedUser {
+  apiKey: string;
+}
 
 @Authenticator("apiKey", {
   type: "apiKey",
@@ -11,11 +16,16 @@ import {
 })
 export class WidgetAuthenticator implements AuthenticationController {
   authenticate(value: any, scopes: string[], ctx: RequestContext) {
-    if (value === "swordfish") {
-      // This can be anything to describe your user.  Any non-false response is considered successful authentication.
-      return { authenticated: true };
+    if (value !== "swordfish" && value !== "marlin") {
+      // Returning false indicates that the authentication has failed.
+      return false;
     }
 
-    return false;
+    if (scopes.includes("widgets:write") && value !== "marlin") {
+      // Alternatively to returning false, any http-error derived error can be thrown.
+      throw new Unauthorized("Insufficient permissions");
+    }
+
+    return { apiKey: value } satisfies AuthenticatedUser;
   }
 }
